Refactor session interface and handle logouts

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,11 @@
 [tool.poetry]
 name = "python-chargepoint"
-version = "0.1.0"
+version = "0.2.0"
 description = "A simple, Pythonic wrapper for the ChargePoint API."
 authors = ["Marc Billow <mbillow@users.noreply.github.compoetry>"]
 license = "MIT"
 packages = [
-    { include = "chargepoint" },
+    { include = "python_chargepoint" },
 ]
 
 [tool.poetry.dependencies]
