Write tests for session and types

--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,51 @@
 [tox]
-skipsdist = true
-envlist = py39
+envlist =
+    py39
+    black
+    flake8
+isolated_build = True
+
+[tox:.package]
+basepython = python3
 
 [testenv]
+commands =
+    poetry install
+    poetry run pytest {posargs}
+whitelist_externals = poetry
+
+[testenv:black]
+skip_install = true
 whitelist_externals = poetry
 commands =
-    poetry install -v
-    poetry run pytest
+    poetry install
+    poetry run black --check --target-version py39 python_chargepoint/ tests/
+
+[testenv:flake8]
+skip_install = true
+whitelist_externals = poetry
+commands =
+    poetry install
+    poetry run flake8 python_chargepoint/ tests/
+
+[pytest]
+testpaths = tests
+addopts =
+    --cov
+    --cov-config=tox.ini
+    --cov-report=term
+    --cov-report=xml
+
+[flake8]
+# Match Black Formatter
+max-line-length = 88
+extend-ignore = E203, E501, W503
+
+[coverage:run]
+source = python_chargepoint
+branch = True
+omit = python_chargepoint/__main__.py
+
+[coverage:report]
+show_missing = True
+fail_under = 100
