--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,10 @@ requests = "^2.27.1"
 tox = "^3.24.5"
 black = "^22.1.0"
 pytest = "^6.2.5"
+responses = "^0.18.0"
+flake8 = "^4.0.1"
+pytest-mock = "^3.7.0"
+pytest-cov = "^3.0.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
