Add project.readme to pyproject

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,9 @@
+[project]
+readme = "README.md"
+
 [tool.poetry]
 name = "python-chargepoint"
-version = "1.9.0"
+version = "1.9.1"
 description = "A simple, Pythonic wrapper for the ChargePoint API."
 authors = ["Marc Billow <mbillow@users.noreply.github.compoetry>"]
 license = "MIT"
