Update dependencies, fix formatting, bump version

--- a/tox.ini
+++ b/tox.ini
@@ -19,7 +19,7 @@ skip_install = true
 whitelist_externals = poetry
 commands =
     poetry install
-    poetry run black --check --target-version py39 python_chargepoint/ tests/
+    poetry run black --check python_chargepoint/ tests/
 
 [testenv:flake8]
 skip_install = true
@@ -48,4 +48,5 @@ omit = python_chargepoint/__main__.py
 
 [coverage:report]
 show_missing = True
-fail_under = 100
+fail_under = 90
+
