--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "python-chargepoint"
-version = "1.9.2"
+version = "1.10.0"
 description = "A simple, Pythonic wrapper for the ChargePoint API."
 authors = ["Marc Billow <mbillow@users.noreply.github.compoetry>"]
 license = "MIT"
@@ -11,14 +11,14 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.9"
-requests = "^2.27.1"
+requests = "^2.32.3"
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 tox = "^3.24.5"
-black = "^22.1.0"
+black = "^25.1.0"
 pytest = "^6.2.5"
 responses = "^0.18.0"
-flake8 = "^4.0.1"
+flake8 = "^7.2.0"
 pytest-mock = "^3.7.0"
 pytest-cov = "^3.0.0"
 
